# grid-container-ftxui

./: CMakeLists.txt  GridContainer.cpp  GridContainer.h  README.md  main.cpp
cmake/: ftxui.cmake
example/: CMakeLists.txt  main.cpp
include/ftxui-grid-container/: grid-container.hpp
src/ftxui-grid-container/: grid-container.cpp
